kubernetes-security/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homework
  name: dp
  labels:
    app: deployment-demo
    version: v1
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: deployment-demo
  template:
    metadata:
      name: dp
      labels:
        app: deployment-demo
        managed-by: homework
    spec:
      serviceAccountName: monitoring
      containers:
        - name: webserver
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - name: www
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /homework
              name: workdir
            - mountPath: /usr/share/nginx/html
              name: workdir
              readOnly: true
          workingDir: /homework
          lifecycle:
            preStop:
              exec:
                command: [ "rm /homework/index.html" ]
          readinessProbe:
            httpGet:
              port: www
              path: /index.html
      restartPolicy: Always
      volumes:
        - name: workdir
          emptyDir: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: homework
                    operator: In
                    values:
                      - "true"
