kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-otus
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  ingressClassName: nginx
  rules:
    - host: "homework.otus"
      http:
        paths:
          - path: /(homepage[/]?|index.html)$
            pathType: Exact
            backend:
              service:
                name: svc-clusterip
                port:
                  number: 8080
